// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails should render correctly with empty transactions 1`] = `
<ul
  className="sc-ifAKCX isvPdJ"
>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Account Name
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      Ivo
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Account Number
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      io@io.com
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Availble Funds
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      £
      100000
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Transactions
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      No Transactions
    </span>
  </li>
</ul>
`;

exports[`AccountDetails should render correctly with transactions 1`] = `
<ul
  className="sc-ifAKCX isvPdJ"
>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Account Name
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      Ivo
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Account Number
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      io@io.com
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Availble Funds
    </label>
    <span
      className="sc-htpNat isFYmG"
    >
      £
      100000
    </span>
  </li>
  <li>
    <label
      className="sc-bxivhb blKbwO"
    >
      Transactions
    </label>
    <table
      className="sc-bdVaJa eXCjPS"
    >
      <thead>
        <tr>
          <th
            className="sc-bwzfXH VDOjF"
          >
            Name
          </th>
          <th
            className="sc-bwzfXH VDOjF"
          >
            Email
          </th>
          <th
            className="sc-bwzfXH VDOjF"
          >
            Amount
          </th>
          <th
            className="sc-bwzfXH VDOjF"
          >
            Date
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </li>
</ul>
`;
